<resources>
    <string name="app_name">Indian Journo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_category">Category</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="about_us">About Us Content…</string>
    <string name="create_a_new_account">Create a new account ?</string>
    <string name="login">Login</string>
    <string name="already_have_an_account_login">Already have an account ? Login</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>

    <string name="menu_paid">Paid</string>
    <string name="nav_diet">News</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diet_list">Diet List</string>
    <string name="loreum_epsum">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.</string>
    <string name="email">Email</string>
    <string name="payment_detail">Payment Detail</string>

    <string name="logout_user">Logout User</string>


    <color name="persian_grey_primary">#616161</color>
    <color name="persian_grey_dark">#424242</color>
    <color name="persian_grey_accent">#9e9e9e</color>


    <string name="log_out_user">Log Out</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="amount_to_pay">Amount to pay : ₹</string>
    <string name="num_ten">10</string>
    <string name="enter_mobile">Enter mobile</string>
    <string name="enter_email">Enter email</string>
    <string name="payment_details">Payment Details</string>
    <string name="day_sunday">Sunday</string>
    <string name="name">Name</string>
    <string name="privacy_text">Privacy Text</string>
    <string name="privacy_body">Privacy Body</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_version">Version 1.3</string>


    <string name="title_logo">NATIONAL GEOGRAPHIC</string>
    <string name="btn_skip_intro">Skip Intro</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="call_video_api">CALL_VIDEO_API</string>
    <string name="address">Way 2 Media Network Private Limited No 1/1 3rd Floor, 2nd Cross, Adi Kabir Ashram Main Rd, Thimaiah Garden, RT Nagar, Bengaluru, Karnataka 560032</string>


</resources>