<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity">
    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/mobile"
               style="@style/etStyleMainLayout">
            <EditText
                android:id="@+id/etMobileReg"
                android:maxLength="10"
                android:inputType="number"
                style="@style/etStyleMain"
                android:hint="@string/mobile" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/email"
                style="@style/etStyleMainLayout">
            <EditText
                android:id="@+id/etEmailReg"
                android:inputType="textEmailAddress"
                style="@style/etStyleMain"
                android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/name"
                style="@style/etStyleMainLayout">
            <EditText
                android:id="@+id/etNameReg"
                style="@style/etStyleMain"
                android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                android:hint="Password"
                app:passwordToggleTint="@color/colorPrimary"
                style="@style/etStyleMainLayout">
            <EditText
                android:id="@+id/etPassReg"
                android:inputType="textPassword"
                style="@style/etStyleMain"
                android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnReg"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom"
                android:textAllCaps="false"
                android:text="@string/registration"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/already_have_an_account_login"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />


        </LinearLayout>


    </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>