<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logopng" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
<com.google.android.material.textfield.TextInputLayout
    android:hint=" Email"
   style="@style/etStyleMainLayout">

            <EditText
                android:id="@+id/etEmailLogin"
               style="@style/etStyleMain"
                android:hint=" Email" />

</com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                android:hint="@string/password"
                app:passwordToggleTint="@color/colorPrimary"
                style="@style/etStyleMainLayout">
            <EditText
                android:id="@+id/etPassLogin"
                android:hint="@string/password"
                android:inputType="textPassword"
               style="@style/etStyleMain"
               />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom"
                android:textAllCaps="false"
                android:text="@string/login"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/create_a_new_account"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />


        </LinearLayout>


    </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>